--- a/app/globals.css
+++ b/app/globals.css
@@ -63,6 +63,17 @@
   @apply text-6xl xl:text-[60px] xl:leading-[70px] tracking-[-2px] font-bold;
 }
 
+.h2 {
+  @apply text-4xl font-bold;
+}
+
+.h3 {
+  @apply text-3xl font-bold;
+}
+
+.h4 {
+  @apply text-[22px] font-semibold;
+}
 .subtitle {
   @apply text-muted-foreground text-lg mb-8 font-light;
 }
